force-app/main/default/objects/API_Configuration__mdt/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <description>The end point this call should be directed to</description>
    <label>End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>