force-app/main/default/objects/API_Configuration__mdt/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>Key + value, separated by &apos;::&apos; between the key and the value and by &apos;,,&apos; between the key + value pair. 
For example: key1::value1,,key1::value2,,key2::value3</description>
    <inlineHelpText>Key + value, separated by &apos;::&apos; between the key and the value and by &apos;,,&apos; between the key + value pair. 
For example: key1::value1,,key1::value2,,key2::value3</inlineHelpText>
    <label>Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>