force-app/main/default/objects/API_Configuration__mdt/fields/Token_Id__c.field-meta.xml
<CustomField>
    <fullName>Token_Id__c</fullName>
    <label>Token Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>