force-app/main/default/objects/API_Configuration__mdt/fields/Token_Pass__c.field-meta.xml
<CustomField>
    <fullName>Token_Pass__c</fullName>
    <label>Token Pass</label>
    <length>150</length>
    <type>Text</type>
</CustomField>